--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,10 @@
 name: interface_icons
-description: A new Flutter package project.
-version: 0.0.1
+description: Selected set of interface icons.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
-private: true
+version: 0.0.2
 
 environment:
-  sdk: ">=2.18.6 <3.0.0"
-  flutter: ">=1.17.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   flutter:
